--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,14 @@
-# 
-version: '3'
-
+version: '2.2'
 services:
-  nasa-rest-api:
+  hola:
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
     image: custom-nasa-rest-api
     ports:
       - "8080:8080"
     networks:
-      - performance-network
-      
-      
+      - network1
+
 networks:
-  performance-network:
+  network1:
